--- a/Lession3/2.md
+++ b/Lession3/2.md
@@ -1,4 +1,4 @@
-# 🎬 Use Case – Ứng dụng xem phim (Phiên bản đã chỉnh sửa)
+# 🎬 Use Case – Ứng dụng xem phim (Phiên bản tương thích)
 
 ## 🧍‍♂️ Actor
 
@@ -8,18 +8,18 @@
 
 ```mermaid
 graph TD
-    %% Định nghĩa các Actor (hình người với tên ở dưới)
-    actor Người_dùng
+    %% Định nghĩa Actor bằng cú pháp node chuẩn (tương thích 100%)
+    U((Người dùng))
 
-    %% Định nghĩa các Use Case
-    UC1((Xem chi tiết phim))
-    UC2((Xem trailer))
-    UC3((Xem bình luận))
+    %% Định nghĩa các Use Case
+    UC1((Xem chi tiết phim))
+    UC2((Xem trailer))
+    UC3((Xem bình luận))
 
-    %% Mối quan hệ
-    Người_dùng --> UC1
+    %% Mối quan hệ
+    U --> UC1
 
-    %% Mối quan hệ Extend (Mở rộng)
-    UC2 .-> |extend| UC1
-    UC3 .-> |extend| UC1
+    %% Mối quan hệ Extend (Mở rộng)
+    UC2 .-> |extend| UC1
+    UC3 .-> |extend| UC1
 ```
