--- a/Lession3/2.md
+++ b/Lession3/2.md
@@ -23,3 +23,16 @@ graph TD
     UC2 .-> |extend| UC1
     UC3 .-> |extend| UC1
 ```
+
+@startuml
+left to right direction
+skinparam packageStyle rectangle
+actor customer
+actor clerk
+rectangle checkout {
+customer -- (checkout)
+(checkout) .> (payment) : include
+(help) .> (checkout) : extends
+(checkout) -- clerk
+}
+@enduml
