--- a/Lession3/2.md
+++ b/Lession3/2.md
@@ -24,7 +24,7 @@ graph TD
     UC3 .-> |extend| UC1
 ```
 
-@startuml
+```@startuml
 left to right direction
 skinparam packageStyle rectangle
 actor customer
@@ -36,3 +36,5 @@ customer -- (checkout)
 (checkout) -- clerk
 }
 @enduml
+
+```
