--- a/Lession3/2.md
+++ b/Lession3/2.md
@@ -1,40 +1,29 @@
-# 🎬 Use Case – Ứng dụng xem phim (Phiên bản tương thích)
+Chào bạn, đây là phần trình bày bằng Markdown (MD) có kèm biểu đồ Mermaid, giải thích cho yêu cầu của bạn.
 
-## 🧍‍♂️ Actor
+---
 
-- **Người dùng**: Người xem sử dụng ứng dụng để tìm, xem thông tin và nội dung phim.
+## 💎 Sơ đồ Use Case: Ứng dụng xem phim
 
-## 📊 Sơ đồ Use Case (chuẩn UML)
+Dựa trên tình huống: "chức năng 'Xem chi tiết phim' **có thể mở rộng** thành 'Xem trailer' hoặc 'Xem bình luận'", mối quan hệ đúng phải là `<<extend>>` (mở rộng).
+
+Mối quan hệ `<<extend>>` được sử dụng khi một chức năng là **tùy chọn** (không bắt buộc) và chỉ xảy ra trong một số điều kiện nhất định. Ngược lại, `<<include>>` (bao gồm) được dùng khi một chức năng là **bắt buộc**.
+
+Trong trường hợp này, việc "Xem trailer" là một tùy chọn sau khi đã vào "Xem chi tiết phim", do đó chúng ta dùng `<<extend>>`.
+
+### 1. Biểu đồ Use Case (Vẽ bằng Mermaid)
 
 ```mermaid
-graph TD
-    %% Định nghĩa Actor bằng cú pháp node chuẩn (tương thích 100%)
-    U((Người dùng))
+usecaseDiagram
+    actor "Người dùng" as User
 
-    %% Định nghĩa các Use Case
-    UC1((Xem chi tiết phim))
-    UC2((Xem trailer))
-    UC3((Xem bình luận))
+    rectangle "Hệ thống App" {
+        usecase "Xem chi tiết phim" as UC_Base
+        usecase "Xem trailer" as UC_Ext1
+        usecase "Xem bình luận" as UC_Ext2
+    }
 
-    %% Mối quan hệ
-    U --> UC1
+    User --> UC_Base
 
-    %% Mối quan hệ Extend (Mở rộng)
-    UC2 .-> |extend| UC1
-    UC3 .-> |extend| UC1
-```
-
-```@startuml
-left to right direction
-skinparam packageStyle rectangle
-actor customer
-actor clerk
-rectangle checkout {
-customer -- (checkout)
-(checkout) .> (payment) : include
-(help) .> (checkout) : extends
-(checkout) -- clerk
-}
-@enduml
-
+    UC_Ext1 ..> UC_Base : <<extend>>
+    UC_Ext2 ..> UC_Base : <<extend>>
 ```
